[gd_scene load_steps=13 format=3 uid="uid://krbu2nwmhsmx"]

[ext_resource type="Script" path="res://scenes/prefabs/bush.gd" id="1_3fql8"]
[ext_resource type="Script" path="res://addons/plugins/Components/Health/Health.gd" id="1_nuqfc"]
[ext_resource type="Shader" path="res://addons/plugins/Components/FlashingSprite2D/flash.gdshader" id="2_ydikc"]
[ext_resource type="Texture2D" uid="uid://bjvt1angi47jd" path="res://assets/bush.png" id="3_2vdqg"]
[ext_resource type="Script" path="res://addons/plugins/Components/FlashingSprite2D/FlashingSprite2D.gd" id="4_1kw2j"]
[ext_resource type="Script" path="res://addons/plugins/Components/Hittable/Hittable.gd" id="5_xjjsu"]
[ext_resource type="Resource" uid="uid://b4cf4aor6mg0u" path="res://resources/items/berries.tres" id="7_8avem"]
[ext_resource type="Resource" uid="uid://bpfim2ndbfwrr" path="res://resources/items/branches.tres" id="7_mgtvj"]
[ext_resource type="Script" path="res://addons/plugins/Components/ResourceSpawner2D/ResourceSpawner2D.gd" id="8_f014e"]
[ext_resource type="PackedScene" uid="uid://bjfaaps6ijm8y" path="res://scenes/prefabs/drop.tscn" id="10_dht4u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghpxn"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_665a8"]
shader = ExtResource("2_ydikc")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_amount = 0.0

[node name="Bush" type="StaticBody2D"]
collision_layer = 3
script = ExtResource("1_3fql8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_ghpxn")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_nuqfc")
maxHp = 20

[node name="FlashingSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_665a8")
position = Vector2(0, -8)
texture = ExtResource("3_2vdqg")
hframes = 2
frame = 1
script = ExtResource("4_1kw2j")

[node name="Hittable" type="Node" parent="."]
script = ExtResource("5_xjjsu")

[node name="DropSpawner" type="Node2D" parent="."]
script = ExtResource("8_f014e")
resource = ExtResource("7_mgtvj")
to_spawn = ExtResource("10_dht4u")

[node name="BerrySpawner" type="Node2D" parent="."]
script = ExtResource("8_f014e")
resource = ExtResource("7_8avem")
to_spawn = ExtResource("10_dht4u")
amount = 2

[connection signal="damage_taken" from="Health" to="FlashingSprite2D" method="flash"]
[connection signal="die" from="Health" to="DropSpawner" method="trigger"]
[connection signal="get_hit" from="Hittable" to="Health" method="damage"]
